aplicando estilos em DOM

--- a/02-dom/desafio-01/index.html
+++ b/02-dom/desafio-01/index.html
@@ -19,7 +19,7 @@
     
     <!-- 5) Inicialize o input com o seu nome (use o atributo "value") -->
     <div>
-        <input type="text" v-bind:value="myName" v-once>
+        <input type="text" v-model="user.name">
     </div>
 </div>
 <script src="app.js"></script>
