--- a/02-dom/06-estilos-v3.html
+++ b/02-dom/06-estilos-v3.html
@@ -1,6 +1,6 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <style>
-  #app {
+  .caixas {
     display: flex;
     justify-content: space-around;
   }
@@ -25,10 +25,13 @@
 </style>
 
 <div id="app">
-  <div class="demo" :class="estilo1" 
-    @click="aplicarC1 = !aplicarC1"></div>
-  <div class="demo" :class="{'cor-2': aplicarC2}" @click="aplicarC2 = !aplicarC2"></div>
-  <div class="demo" :class="{c3: aplicarC3}" @click="aplicarC3 = !aplicarC3"></div>
+  <div class="caixas">
+    <div class="demo" :class="estilo1" @click="aplicarC1 = !aplicarC1"></div>
+    <div class="demo"></div>
+    <div class="demo" :class="classeCSS"></div>
+  </div>
+  <hr>
+  <input type="text" v-model="classeCSS">
 </div>
 
 <script>
@@ -36,13 +39,12 @@
     el: '#app',
     data: {
       aplicarC1: false,
-      aplicarC2: false,
-      aplicarC3: false
+      classeCSS: 'c1'
     },
     computed: {
       estilo1() {
         return {
-          c1: this.aplicarC1, 
+          c1: this.aplicarC1,
           'cor-2': !this.aplicarC1
         };
       }
